TODO
* update libfmapi.3 man page

20150104
* 2015 update

20141021
* worked on stand-alone version

20141018
* changes for deployment

20141012
* worked on utility scripts

20141005
* added format working document
* small changes

20140921
* changes for project site move

20140810
* worked on format support

20140805
* worked on format support

20140730
* Created stand-alone version of version used in libfwsi
