@@ -26,7 +26,7 @@ able to process this file type.
 [preface]
 == License
 ....
-Copyright (C) 2013-2014, Joachim Metz <joachim.metz@gmail.com>.
+Copyright (C) 2013-2015, Joachim Metz <joachim.metz@gmail.com>.
 Permission is granted to copy, distribute and/or modify this document under the 
 terms of the GNU Free Documentation License, Version 1.3 or any later version 
 published by the Free Software Foundation; with no Invariant Sections, no 
@@ -44,6 +44,7 @@ in the section entitled "GNU Free Documentation License".
 | 0.0.3 | J.B. Metz | August 2014 | Moved the known property set documentation and notes to this document.
 | 0.0.4 | J.B. Metz | August 2014 | Additional information.
 | 0.0.5 | J.B. Metz | October 2014 | Switched to asccidoc format.
+| 0.0.6 | J.B. Metz | June 2015 | Additional information.
 |===
 
 :numbered:
