@@ -1,6 +1,9 @@
 TODO
 * update libfmapi.3 man page
 
+20150608
+* fixes in format class identifier
+
 20150104
 * 2015 update
 
